src/objects/Apttus__WizardRule__c.object
<CustomObject>
    <description>Individual rules which are applied within a ruleset.</description>
    <fields>
        <fullName>Apttus__Active__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Signifies that the Rule within a Ruleset is Active. Setting Wizard Design as Active automatically activates the included rules.</description>
        <inlineHelpText>Signifies that the Rule within a Ruleset is Active. Setting Wizard Design as Active automatically activates the included rules.</inlineHelpText>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Apttus__BooleanOperator__c</fullName>
        <description>How to use in conjunction with other rules</description>
        <inlineHelpText>How to use in conjunction with other rules</inlineHelpText>
        <label>Boolean Operator</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>AND</fullName>
                </value>
                <value>
                    <fullName>OR</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Apttus__ComparisonOperator__c</fullName>
        <description>Comparison operator used in the expression condition like equal to, contains, starts with etc</description>
        <inlineHelpText>Comparison operator used in the expression condition like equal to, contains, starts with etc</inlineHelpText>
        <label>Comparison Operator</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>equal to</fullName>
                    <default>true</default>
                    <label>equal to</label>
                </value>
                <value>
                    <fullName>not equal to</fullName>
                </value>
                <value>
                    <fullName>less than</fullName>
                </value>
                <value>
                    <fullName>less than or equal to</fullName>
                </value>
                <value>
                    <fullName>greater than</fullName>
                </value>
                <value>
                    <fullName>greater than or equal to</fullName>
                </value>
                <value>
                    <fullName>includes</fullName>
                </value>
                <value>
                    <fullName>excludes</fullName>
                </value>
                <value>
                    <fullName>starts with</fullName>
                </value>
                <value>
                    <fullName>contains</fullName>
                </value>
                <value>
                    <fullName>does not contain</fullName>
                </value>
                <value>
                    <fullName>does not start with</fullName>
                </value>
                <value>
                    <fullName>ends with</fullName>
                </value>
                <value>
                    <fullName>does not end with</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Apttus__FromInputControlId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The Input control on which this rule is to be applied in an expression to determine based upon the rule type the outcome value.</description>
        <inlineHelpText>The Input control on which this rule is to be applied in an expression to determine based upon the rule type the outcome value.</inlineHelpText>
        <label>From Input Control</label>
        <referenceTo>Apttus__WizardInputControl__c</referenceTo>
        <relationshipName>WizardRules</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Apttus__FromInputControl__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The input control that is driving the evaluation</description>
        <inlineHelpText>The input control that is driving the evaluation</inlineHelpText>
        <label>From Input Control</label>
        <referenceTo>Apttus__WizardInputControl__c</referenceTo>
        <relationshipName>Wizard_Rules</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Apttus__InputResponseRuleType__c</fullName>
        <description>The rule type for the input</description>
        <inlineHelpText>The rule type for the input</inlineHelpText>
        <label>Rule Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Input Expression</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Apttus__ResultantValue__c</fullName>
        <description>The value that should result for this input based on the value of another input</description>
        <inlineHelpText>The value that should result for this input based on the value of another input</inlineHelpText>
        <label>Resultant Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus__RuleExpressionRuleType__c</fullName>
        <description>Rule type for rule expressions</description>
        <inlineHelpText>Rule type for rule expressions</inlineHelpText>
        <label>Rule Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Go To Input</fullName>
                </value>
                <value>
                    <fullName>Go To Step</fullName>
                </value>
                <value>
                    <fullName>Go To Wizard</fullName>
                </value>
                <value>
                    <fullName>Determine Focus Object</fullName>
                </value>
                <value>
                    <fullName>Determine Record Type</fullName>
                </value>
                <value>
                    <fullName>Determine Doc Gen</fullName>
                </value>
                <value>
                    <fullName>Invoke Object Actions</fullName>
                </value>
                <value>
                    <fullName>Go To Page</fullName>
                </value>
                <value>
                    <fullName>Go To URL</fullName>
                </value>
                <value>
                    <fullName>Go To Submit</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Apttus__Sequence__c</fullName>
        <description>The sequence number of this rule within a ruleset</description>
        <inlineHelpText>The sequence number of this rule within a ruleset</inlineHelpText>
        <label>Sequence</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Apttus__ToInputControl__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The Input Control this is associated to</description>
        <inlineHelpText>The Input Control this is associated to</inlineHelpText>
        <label>To Input Control</label>
        <referenceTo>Apttus__WizardInputControl__c</referenceTo>
        <relationshipName>Wizard_Rules1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Apttus__Value__c</fullName>
        <description>The value defined in an expression that is used to determine if the condition is met</description>
        <inlineHelpText>The value defined in an expression that is used to determine if the condition is met</inlineHelpText>
        <label>Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus__WizardRulesetId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to wizard ruleset this rule belongs to</description>
        <inlineHelpText>Lookup to wizard ruleset this rule belongs to</inlineHelpText>
        <label>Wizard Ruleset</label>
        <referenceTo>Apttus__WizardRuleset__c</referenceTo>
        <relationshipName>Wizard_Rules1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Apttus__WizardRuleset__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The ruleset this rule applies to</description>
        <inlineHelpText>The ruleset this rule applies to</inlineHelpText>
        <label>Wizard Ruleset</label>
        <referenceTo>Apttus__WizardRuleset__c</referenceTo>
        <relationshipName>WizardRules</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Wizard Rule (Deprecated)</label>
    <listViews>
        <fullName>Apttus__All</fullName>
        <columns>NAME</columns>
        <columns>Apttus__ComparisonOperator__c</columns>
        <columns>Apttus__Value__c</columns>
        <columns>Apttus__Active__c</columns>
        <columns>Apttus__Sequence__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Apttus__All1</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Wizard Rule Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Wizard Rules</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>